--- a/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/scaffolding.less
+++ b/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/scaffolding.less
@@ -65,3 +65,5 @@ a.action:hover
     margin-top: @spacing;
 	display: block;
 }
+
+.ajax-loading { background: url(/content/images/icons/ajax-loader.gif) no-repeat; padding: 7px 0px 10px 45px; }
