--- a/trunk/Portal/Portal.Web/Portal.Web/Content/less/file-manager/file-manager.less
+++ b/trunk/Portal/Portal.Web/Portal.Web/Content/less/file-manager/file-manager.less
@@ -30,3 +30,10 @@
 
 
 .file-manager .tooltip { margin: 0px 0px 0px -93px; }
+
+
+.uploading { display: none; font-size: 16px; color: #000000; margin: 5px 0px 0px 20px; }
+.drop-file { display: none; font-size: 16px; color: #000000; margin: 5px 0px 0px 20px; }
+.file-uploading .files { display: none; }
+.file-uploading .uploading { display: block; }
+.file-dragged .drop-file { display: block; }
