--- a/trunk/Portal/Portal.Web/Portal.Web/Areas/Property-Editor/Views/Properties/Index.cshtml
+++ b/trunk/Portal/Portal.Web/Portal.Web/Areas/Property-Editor/Views/Properties/Index.cshtml
@@ -30,7 +30,7 @@
     {
         <li>
             @Html.RouteLink(property.Name, PropertyEditorAreaRegistration.Edit, new { propertyName = property.Name, propertyId = property.Id }, new {})
-            <img height="100" width="280" src="http://www.castlerockproperty.com.au/Content/Images/Properties/@property.ImageFolder/755x311.jpg" />
+            <img height="100" width="280" src="http://castlerockproperty.blob.core.windows.net/castlerock/images/properties/@property.ImageFolder/755x311.jpg" />
         </li>   
     }
     </ul>
