--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -64,11 +64,15 @@
 
     <h3>Annual General Meeting</h3>
     <p>
+        2012 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a>
+    </p>
+    <p>
         2011 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-Amended.pdf">(download pdf)</a>
     </p>
 
     <h3>Quarterly updates</h3>
     <p>
+        September 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a> <br/>
         June 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2012.pdf">(download pdf)</a> <br/>
         March 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2012.pdf">(download pdf)</a> <br/>
         December 2011  <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2011.pdf">(download pdf)</a>
@@ -76,9 +80,10 @@
 
     <h3>Financial Reports </h3>
     <p>
-        2009 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2009-Accounts.pdf">(download pdf)</a><br />
-        2010 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2010-Accounts.pdf">(download pdf)</a><br />
+        2012 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2012-Accounts.pdf">(download pdf)</a>
         2011 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2011-Accounts.pdf">(download pdf)</a>
+        2010 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2010-Accounts.pdf">(download pdf)</a><br />
+        2009 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2009-Accounts.pdf">(download pdf)</a><br />
     </p>
     
     <h3>Tax Statements</h3>
