--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -64,9 +64,7 @@
 
     <h3>Annual General Meeting</h3>
     <p>
-        2012 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a>
-    </p>
-    <p>
+        2012 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a> <br />
         2011 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-Amended.pdf">(download pdf)</a>
     </p>
 
