--- a/trunk/Auslink/Auslink.Web/Views/Financials/FundSummary.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Financials/FundSummary.cshtml
@@ -18,4 +18,129 @@
 }
 
 
-<h2>Fund Summary</h2><p>    A financial summary of the Trust is provided in the table below:</p><ul class="table four-column">    <li class="table-header">        <div class="wide">Profit & Loss</div>        <div>30 June 2010</div>        <div>30 June 2011</div>        <div></div>    </li>    <li>        <div class="wide">Total Revenue</div>        <div>$0.53m</div>        <div>$1.16m</div>        <div></div>    </li>    <li>        <div class="wide">Total Expenses</div>        <div>$0.09m</div>        <div>$0.34m</div>        <div></div>    </li>    <li>        <div class="wide">Profit</div>        <div>$0.44m</div>        <div>$0.82m</div>        <div></div>    </li>    <li>        <div class="wide">Distributions</div>        <div>$0.18m </div>        <div>$0.47m </div>        <div></div>    </li>    <li>        <div class="wide">Distributions (per unit)</div>        <div>8.0 cents</div>        <div>8.7 cents</div>        <div></div>    </li>    <li>        <div class="wide">Tax advantaged component</div>        <div>100%</div>        <div>100%</div>        <div></div>    </li></ul><ul class="table four-column">    <li class="table-header">        <div class="wide">Balance Sheet</div>        <div>30 June 2010</div>        <div>30 June 2011</div>        <div></div>    </li>    <li>        <div class="wide">Total Assets</div>        <div>$6.56m</div>        <div>$14.81m</div>        <div></div>    </li>    <li>        <div class="wide">Total Liabilities</div>        <div>$3.23m</div>        <div>$7.05m</div>        <div></div>    </li>    <li>        <div class="wide">Net Assets</div>        <div>$3.33m</div>        <div>$7.76m</div>        <div></div>    </li>    <li>        <div class="wide">Total Units on Issue</div>        <div>3,110,000 </div>        <div>7,049,017</div>        <div></div>    </li>    <li>        <div class="wide">Net Tangible Assets (per unit)</div>        <div>$1.07</div>        <div>$1.10</div>        <div></div>    </li>    <li>        <div class="wide">Gearing</div>        <div>45.1%</div>        <div>46.3%</div>        <div></div>    </li></ul>  
+<h2>Fund Summary</h2>
+
+<p>
+    A financial summary of the Trust is provided in the table below:
+</p>
+
+<ul class="table four-column">
+    <li class="table-header">
+        <div class="wide">Profit & Loss</div>
+        <div>30 June 2010</div>
+        <div>30 June 2011</div>
+        <div>30 June 2012</div>
+    </li>
+
+    <li>
+        <div class="wide">Total Revenue</div>
+        <div>$0.53m</div>
+        <div>$1.16m</div>
+        <div>$1.99m</div>
+    </li>
+
+    <li>
+        <div class="wide">Total Expenses</div>
+        <div>$0.09m</div>
+        <div>$0.34m</div>
+        <div>$0.58m</div>
+    </li>
+
+    <li>
+        <div class="wide">Profit</div>
+        <div>$0.44m</div>
+        <div>$0.82m</div>
+        <div>$1.41m</div>
+    </li>
+
+    <li>
+        <div class="wide">Distributions</div>
+        <div>$0.18m</div>
+        <div>$0.47m</div>
+        <div>$0.87m</div>
+    </li>
+
+    <li>
+        <div class="wide">Distributions (per unit)</div>
+        <div>8.0 cents</div>
+        <div>8.7 cents</div>
+        <div>9.0 cents</div>
+    </li>
+
+    <li>
+        <div class="wide">Tax advantaged component</div>
+        <div>100%</div>
+        <div>100%</div>
+        <div>100%</div>
+    </li>
+</ul>
+
+<ul class="table four-column">
+    <li class="table-header">
+        <div class="wide">Balance Sheet</div>
+        <div>30 June 2010</div>
+        <div>30 June 2011</div>
+        <div>30 June 2012</div>
+    </li>
+
+    <li>
+        <div class="wide">Total Assets</div>
+        <div>$6.56m</div>
+        <div>$14.81m</div>
+        <div>$25.56m</div>
+    </li>
+    <li>
+        <div class="wide">Total Liabilities</div>
+        <div>$3.23m</div>
+        <div>$7.05m</div>
+        <div>$11.15m</div>
+    </li>
+
+    <li>
+        <div class="wide">Net Assets</div>
+        <div>$3.33m</div>
+        <div>$7.76m</div>
+        <div>$14.41m</div>
+    </li>
+
+    <li>
+        <div class="wide">Total Units on Issue</div>
+        <div>3,110,000 </div>
+        <div>7,049,017</div>
+        <div>12,724,199</div>
+    </li>
+
+    <li>
+        <div class="wide">Net Tangible Assets (per unit)</div>
+        <div>$1.07</div>
+        <div>$1.10</div>
+        <div>$1.13</div>
+    </li>
+
+    <li>
+        <div class="wide">Gearing</div>
+        <div>45.1%</div>
+        <div>46.3%</div>
+        <div>39.3%</div>
+    </li>
+</ul>
+
+ 
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
