--- a/trunk/Auslink/Auslink.Web/Content/Css/site.css
+++ b/trunk/Auslink/Auslink.Web/Content/Css/site.css
@@ -102,15 +102,16 @@ ul.properties .red { background: url(http://castlerockproperty.blob.core.windows
 
 /* Login From */
 #login { float: right; }
-form { background: url(http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/login/login-background.png) repeat-y; min-height: 229px; width: 239px;}
+form { border: 1px solid #aaaaaa; min-height: 229px; width: 239px;}
 form fieldset { display: block; padding: 20px;  }
 form label { display: block; margin: 10px 0px 0px 0px; }
-form input[type="text"] { display: block; background: #ebebeb; height: 20px; width: 90%; }
-form input[type="password"] { display: block; background: #ebebeb; height: 20px; width: 90%; }
-form input[type="submit"] { cursor: hand; cursor: pointer; display: block; margin: 10px 0px 0px 0px; background: url(http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/login/login-button.png) no-repeat;  width: 82px; height: 32px; border: 0px solid #000; }
+form input[type="text"] { display: block; background: #ebebeb; height: 20px; width: 90%; padding: 5px 5px 5px 5px; font-size: 16px; }
+form input[type="password"] { display: block; background: #ebebeb; height: 20px; width: 90%; padding: 5px 5px 5px 5px; font-size: 16px; }
+form input[type="submit"] { cursor: hand; cursor: pointer; display: block; margin: 10px 0px 0px 0px; background: #BA0618; color: #ffffff; width: 82px; height: 32px; border: 0px solid #000; }
+form input[type="submit"]:hover { background: #7a0000; }
 form a { display: block; margin: 20px 0px 0px 0px; color: #000; }
-.form-top { background: url(http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/login/login-top.png) no-repeat; width: 239px; height: 2px; }
-.form-bottom { background: url(http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/login/login-bottom.png) no-repeat; width: 239px; height: 26px; }
+.form-top { width: 239px; height: 2px; }
+.form-bottom { width: 239px; height: 26px; }
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
