--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -53,11 +53,11 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 31 December 2012</p>
+            <p>Quarter ending 31 March 2013</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 January 2013</p>
+            <p>30 April 2013</p>
         </li>
     </ul>
 
@@ -70,6 +70,7 @@
 
     <h3>Quarterly updates</h3>
     <p>
+        December 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2012.pdf">(download pdf)</a> <br/>
         September 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a> <br/>
         June 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2012.pdf">(download pdf)</a> <br/>
         March 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2012.pdf">(download pdf)</a> <br/>
