--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Footscray.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Footscray.cshtml
@@ -15,13 +15,28 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>60 Hopkins St, Footscray, Vic </p>    </li>
-    <li>        <p>Description:</p>	        <p>Two level office building with underground parking for 40 cars</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>2,200 square metres</p>    </li>
-    <li>        <p>Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>7 years + 2 x 3 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
-        <p>TBA</p>
+        <p>Address:</p>
+        <p>75 Moore St, Footscray, Vic </p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Two level office building with underground parking for 40 cars</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>2,200 square metres</p>
+    </li>
+    <li>
+        <p>Tenant:</p>
+        <p>Commonwealth Government</p>
+    </li>
+    <li>
+        <p>Lease Term:</p>
+        <p>7 years + 2 x 3 years</p>
+    </li>
+    <li>
+        <p>Lease Commencement:</p>
+        <p>9 November 2012</p>
     </li>
 </ul>
 
