--- a/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
@@ -22,6 +22,6 @@
 </p>
 
 <p>
-    Established in December 2008, the Trust currently owns three Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA and 
-    Port Pirie SA, and is developing a further two in Footscray VIC and South Brisbane QLD.
+    Established in December 2008, the Trust currently owns three Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA,
+    Port Pirie SA and Footscray VIC, and is developing a fifth Centrelink in South Brisbane QLD.
 </p>
