--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
                     @Html.RouteLink("Port Pirie, SA", "Port-Pirie")
                     @Html.RouteLink("Footscray, VIC", "Footscray")
                     @Html.RouteLink("South Brisbane, QLD", "South-Brisbane")
+                    @Html.RouteLink("Townsville, QLD", "Townsville")
+                    
                 </div>
             </li>
 
