--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
@@ -36,9 +36,13 @@
         <div class="left square red">5</div>
         @Html.RouteLink("South Brisbane, QLD", "South-Brisbane")
     </li>
-    <li class="red">
+    <li class="light-blue">
         <div class="left square light-blue">6</div>
         @Html.RouteLink("Townsville, QLD", "Townsville")
+    </li>
+    <li class="light-green">
+        <div class="left square light-green">7</div>
+        @Html.RouteLink("Albury, NSW", "Albury")
     </li>
 </ul>
 
@@ -50,6 +54,7 @@
         @Html.RouteLink("4", "Footscray", new { }, new { @class = "square purple footscray" })
         @Html.RouteLink("5", "South-Brisbane", new { }, new { @class = "square red south-brisbane" })
         @Html.RouteLink("6", "Townsville", new { }, new { @class = "square light-blue townsville" })
+        @Html.RouteLink("7", "Albury", new { }, new { @class = "square light-green albury" })
 
 </div>
 
