--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/PropertySideNav.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/PropertySideNav.cshtml
@@ -21,4 +21,7 @@
     <li@(ViewBag.SelctedProperty == "Townsville" ? Html.Raw(" class=\"selected\"") : Html.Raw(string.Empty))>
         @Html.RouteLink("Townsville, QLD", "Townsville")
     </li>
+    <li@(ViewBag.SelctedProperty == "Albury" ? Html.Raw(" class=\"selected\"") : Html.Raw(string.Empty))>
+        @Html.RouteLink("Albury, NSW", "Albury")
+    </li>
 </ul>
