--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                     @Html.RouteLink("Footscray, VIC", "Footscray")
                     @Html.RouteLink("South Brisbane, QLD", "South-Brisbane")
                     @Html.RouteLink("Townsville, QLD", "Townsville")
+                    @Html.RouteLink("Albury, NSW", "Albury")
                     
                 </div>
             </li>
