--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Townsville.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Townsville.cshtml
@@ -15,14 +15,29 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>307 - 311 Ross River Rd Aitkenvale, QLD</p>    </li>
-    <li>        <p>Description:</p>	        <p>Two level office building with 72 car spaces (53 basement)</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>4,854 square metres</p>    </li>
-    <li>        <p>Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>9 years + 2 x 3 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
+        <p>Address:</p>
+        <p>307 - 311 Ross River Rd Aitkenvale, QLD</p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Two level office building with 72 car spaces (53 basement)</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>4,854 square metres</p>
+    </li>
+    <li>
+        <p>Tenant:</p>
+        <p>Commonwealth Government</p>
+    </li>
+    <li>
+        <p>Lease Term:</p>
+        <p>9 years + 2 x 3 years</p>
+    </li>
+    <li>
+        <p>Lease Commencement:</p>
         <p>4 March 2006</p>
     </li>
 </ul>
 
-<img src="http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/properties/Townsville.PNG" width="711" />
+<img src="http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/properties/Townsville.png" width="755" />
