--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -28,13 +28,13 @@
     <h3>Distributions</h3>
     
     <p class="small-margin-bottom">
-        The forecast distribution and tax deferral component for the 2013 financial year is shown below:
+        The forecast distribution and tax deferral component for the 2014 financial year is shown below:
     </p>
 
     <ul class="table two-column">
         <li>
             <p>Amount:</p>
-            <p>9.3 cents per unit</p>
+            <p>10.0 cents per unit</p>
         </li>
         <li>
             <p>Tax Deferred:</p>
@@ -53,11 +53,11 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 31 March 2013</p>
+            <p>Quarter ending 30 June 2013</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 April 2013</p>
+            <p>30 July 2013</p>
         </li>
     </ul>
 
@@ -70,6 +70,7 @@
 
     <h3>Quarterly updates</h3>
     <p>
+        March 2013<a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2013.pdf">(download pdf)</a> <br/>
         December 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2012.pdf">(download pdf)</a> <br/>
         September 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a> <br/>
         June 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2012.pdf">(download pdf)</a> <br/>
