--- a/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
@@ -23,5 +23,5 @@
 
 <p>
     Established in December 2008, the Trust currently owns seven Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA,
-    Port Pirie SA, Footscray VIC, ALbury NSW, Townsville QLD, and South Brisbane QLD, and is developing an eigth Centrelink in Bown QLD.
+    Port Pirie SA, Footscray VIC, Albury NSW, Townsville QLD, and South Brisbane QLD, and is developing an eigth Centrelink in Bowen QLD.
 </p>
