castlerock now compiles

--- a/trunk/Castlerock/Castlerock.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Castlerock/Castlerock.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,22 @@
                 <h1 id="headerLogo"><a href="/" class="logo">Castlerock</a></h1>
                 
                 <ul>
-                    <li@(Model.SelectedNavigation == "Home" ? " class=\"selected\"" : string.Empty)>                        <a href="/">Home</a>                    </li>                    <li@(Model.SelectedNavigation == "Investors" ? " class=\"selected\"" : string.Empty)>                        <a href="/Investors">Investors</a>                    </li>                    <li@(Model.SelectedNavigation == "Properties" ? " class=\"selected\"" : string.Empty)>                        <a href="/Properties">Properties</a>                    </li>                    <li@(Model.SelectedNavigation == "Experience" ? " class=\"selected\"" : string.Empty)>                        <a href="/Experience">Experience</a>                    </li>                    <li@(Model.SelectedNavigation == "AboutUs" ? " class=\"selected\"" : string.Empty)>                        <a href="/AboutUs">About Us</a>                    </li>                </ul>
+                    <li@(Model.SelectedNavigation == "Home" ? " class=\"selected\"" : string.Empty)>
+                        <a href="/">Home</a>
+                    </li>
+                    <li@(Model.SelectedNavigation == "Investors" ? " class=\"selected\"" : string.Empty)>
+                        <a href="/Investors">Investors</a>
+                    </li>
+                    <li@(Model.SelectedNavigation == "Properties" ? " class=\"selected\"" : string.Empty)>
+                        <a href="/Properties">Properties</a>
+                    </li>
+                    <li@(Model.SelectedNavigation == "Experience" ? " class=\"selected\"" : string.Empty)>
+                        <a href="/Experience">Experience</a>
+                    </li>
+                    <li@(Model.SelectedNavigation == "AboutUs" ? " class=\"selected\"" : string.Empty)>
+                        <a href="/AboutUs">About Us</a>
+                    </li>
+                </ul>
             </div>
 
         </div>
