--- a/trunk/Auslink/Auslink.Web/Views/Financials/Returns.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Financials/Returns.cshtml
@@ -30,24 +30,24 @@
 <p>
     Distributions are paid quarterly and expected to be 100% tax advantaged for the next three financial years.
 </p>
-    The returns provided to investors to date are shown below: 
+    The returns provided to investors for the last four financial years are provided below.
 </p>
 
 <ul class="table five-column">
     <li class="table-header">
         <div class="wide">Year Ending</div>
-        <div>30 June 2009</div>
         <div>30 June 2010</div>
         <div>30 June 2011</div>
         <div>30 June 2012</div>
+        <div>30 June 2013</div>
     </li>
 
     <li>
         <div class="wide">Distribution (per unit)</div>
-        <div>8.0 cents*</div>
         <div>8.0 cents</div>
         <div>8.7 cents</div>
         <div>9.0 cents</div>
+        <div>9.3 cents</div>
     </li>
 
     <li>
@@ -60,15 +60,12 @@
     
     <li>
         <div class="wide">Net Tangible Assets (per unit)</div>
-        <div>$1.00</div>
         <div>$1.07</div>
         <div>$1.10</div>
         <div>$1.13</div>
+        <div>$1.16</div>
     </li>
 </ul>
 
-<p>
-    *Annualised
-</p>
 
 
