--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/South-Brisbane.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/South-Brisbane.cshtml
@@ -15,13 +15,28 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>34-36 Annerley Rd, Woolloongabba, QLD</p>    </li>
-    <li>        <p>Description:</p>	        <p>Single level office building with parking for 3 cars</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>770 square metres</p>    </li>
-    <li>        <p>Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>12 years + 2 x 3 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
-        <p>TBA</p>
+        <p>Address:</p>
+        <p>34-36 Annerley Rd, Woolloongabba, QLD</p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Single level office building with parking for 3 cars</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>770 square metres</p>
+    </li>
+    <li>
+        <p>Tenant:</p>
+        <p>Commonwealth Government</p>
+    </li>
+    <li>
+        <p>Lease Term:</p>
+        <p>12 years + 2 x 3 years</p>
+    </li>
+    <li>
+        <p>Lease Commencement:</p>
+        <p>July 2013</p>
     </li>
 </ul>
 
