Updated June Quarter

--- a/trunk/Auslink/Auslink.Web/Views/Financials/Returns.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Financials/Returns.cshtml
@@ -59,10 +59,10 @@
     </li>
     
     <li>
-        <div class="wide">Net Tangible Assets (per unit)</div>
-        <div>$1.07</div>
+        <div class="wide">Unit Price</div>
+        <div>$1.00</div>
+        <div>$1.08</div>
         <div>$1.10</div>
-        <div>$1.13</div>
         <div>$1.16</div>
     </li>
 </ul>
