Update current unit holders page

--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -49,15 +49,15 @@
     <ul class="table two-column">
         <li>
             <p>Amount:</p>
-            <p>2.325 cents per unit</p>
+            <p>2.5 cents per unit</p>
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 30 June 2013</p>
+            <p>Quarter ending 30 September 2013</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 July 2013</p>
+            <p>30 October 2013</p>
         </li>
     </ul>
 
@@ -89,7 +89,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2012 financial year were mailed to unitholders in early September 2012.
+        Tax Statements for the 2013 financial year will be mailed to unitholders in early September 2013.
     </p>
 
     <p>
