--- a/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
@@ -18,4 +18,84 @@
     </ul>
 }
 
-<h2>Overview</h2><p>    The main features of the Trust are summarised below.</p><ul class="table two-column">    <li>        <p>            Investment Vehicle        </p>        <p>            Auslink Property Trust (Unit Trust)        </p>    </li>    <li>        <p>            Manager	        </p>        <p>            Centreway Capital Limited        </p>    </li>    <li>        <p>            Fund Objectives        </p>        <p>            To develop and hold purpose-built government-leased assets located throughout Australia. <br />            To provide investors with a secure and growing income stream, as well long-term capital growth        </p>    </li>    <li>        <p>            Forecast Distributions        </p>        <p>            8.0%+        </p>    </li>    <li>        <p>            Forecast Tax Advantaged Portion	        </p>        <p>            100% for the next 3 financial years        </p>    </li>    <li>        <p>            Distribution Frequency	        </p>        <p>            Quarterly        </p>    </li>    <li>        <p>            Debt Strategy	        </p>        <p>            Target overall gearing of < 50%        </p>    </li>    <li>        <p>            Term of the Trust	        </p>        <p>            10 years commencing on 1 December 2008 or as extended by a vote of Unitholders where over 50% of Unitholders by value are in favour        </p>    </li>    <li>        <p>            Investors	        </p>        <p>            Sophisticated and Wholesale Investors        </p>    </li></ul>
+<h2>Overview</h2>
+
+<p>
+    The main features of the Trust are summarised below.
+</p>
+
+<ul class="table two-column">
+    <li>
+        <p>
+            Investment Vehicle
+        </p>
+        <p>
+            Auslink Property Trust (Unit Trust)
+        </p>
+    </li>
+    <li>
+        <p>
+            Manager	
+        </p>
+        <p>
+            Centreway Capital Limited
+        </p>
+    </li>
+    <li>
+        <p>
+            Fund Objectives
+        </p>
+        <p>
+            To develop and hold purpose-built government-leased assets located throughout Australia. <br />
+            To provide investors with a secure and growing income stream, as well long-term capital growth
+        </p>
+    </li>
+    <li>
+        <p>
+            Forecast Distributions
+        </p>
+        <p>
+            8.0%+
+        </p>
+    </li>
+    <li>
+        <p>
+            Forecast Tax Advantaged Portion	
+        </p>
+        <p>
+            100% for the 2014 financial year
+        </p>
+    </li>
+    <li>
+        <p>
+            Distribution Frequency	
+        </p>
+        <p>
+            Quarterly
+        </p>
+    </li>
+    <li>
+        <p>
+            Debt Strategy	
+        </p>
+        <p>
+            Target overall gearing of < 50%
+        </p>
+    </li>
+    <li>
+        <p>
+            Term of the Trust	
+        </p>
+        <p>
+            10 years commencing on 1 December 2008 or as extended by a vote of Unitholders where over 50% of Unitholders by value are in favour
+        </p>
+    </li>
+    <li>
+        <p>
+            Investors	
+        </p>
+        <p>
+            Sophisticated and Wholesale Investors
+        </p>
+    </li>
+</ul>
