--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -53,23 +53,33 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 30 September 2013</p>
+            <p>Quarter ending 31 December 2013</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 October 2013</p>
+            <p>30 January 2013</p>
         </li>
     </ul>
 
 
     <h3>Annual General Meeting</h3>
     <p>
+        2013 AGM Presentation 
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-2.pdf">(part2)</a>
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-3.pdf">(part3)</a>
+        <br />
         2012 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-2012.pdf">(download pdf)</a> <br />
         2011 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-Property-Trust-AGM-October-Amended.pdf">(download pdf)</a>
     </p>
 
     <h3>Quarterly updates</h3>
     <p>
+        September 2013 
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-2.pdf">(part2)</a>
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-3.pdf">(part3)</a>
+        <br/>
         June 2013 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2013.pdf">(download pdf)</a> <br/>
         March 2013 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2013.pdf">(download pdf)</a> <br/>
         December 2012 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2012.pdf">(download pdf)</a> <br/>
@@ -81,6 +91,7 @@
 
     <h3>Financial Reports </h3>
     <p>
+        2013 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2013-Accounts.pdf">(download pdf)</a><br />
         2012 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2012-Accounts.pdf">(download pdf)</a><br />
         2011 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2011-Accounts.pdf">(download pdf)</a><br />
         2010 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2010-Accounts.pdf">(download pdf)</a><br />
@@ -89,7 +100,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2013 financial year will be mailed to unitholders in early September 2013.
+        Tax Statements for the 2013 financial year were mailed to unitholders in early September 2013.
     </p>
 
     <p>
