testing domain names

--- a/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
@@ -21,7 +21,7 @@
 <h2>Overview</h2>
 
 <p>
-    The main features of the Trust are summarised below.
+    The main features of the Trust are summarised below..
 </p>
 
 <ul class="table two-column">
