--- a/trunk/Portal/Portal.Web/Portal.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Portal/Portal.Web/Portal.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 
     <header>
 
-        <a href="/">@Model.WebsiteName</a>
+        <a href="/">@Model.WebsiteName - New</a>
 
         <ul class="navigation">
 
