--- a/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
@@ -21,7 +21,7 @@
 <h2>Overview</h2>
 
 <p>
-    The main features of the Trust are summarised below..
+    The main features of the Trust are summarised below.
 </p>
 
 <ul class="table two-column">
@@ -47,7 +47,7 @@
         </p>
         <p>
             To develop and hold purpose-built government-leased assets located throughout Australia. <br />
-            To provide investors with a secure and growing income stream, as well long-term capital growth
+            To provide investors with a secure and growing income stream and long-term capital growth
         </p>
     </li>
     <li>
