--- a/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/navigation.less
+++ b/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/navigation.less
@@ -10,8 +10,8 @@ header a:hover { text-decoration: underline; color: #ffffff; }
 
 header ul { float: right; }
 header ul li { float: left; margin-left: 2px; }
-header ul li { -webkit-transition: all .25s linear; transition: all .25s linear; background:-moz-linear-gradient(top,#5f676f 0%,#424a54 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#5f676f),color-stop(100%,#424a54));background:-webkit-linear-gradient(top,#5f676f 0%,#424a54 100%);background:-o-linear-gradient(top,#5f676f 0%,#424a54 100%);background:-ms-linear-gradient(top,#5f676f 0%,#424a54 100%);background:linear-gradient(top,#5f676f 0%,#424a54 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5f676f',endColorstr='#424a54',GradientType=0) }
-header ul li:hover { background: #3C454F !important; }
+header ul li { -webkit-transition: all .25s linear; transition: all .25s linear;  }
+header ul li:hover { background: lighten(#3C454F, 10%); }
 
 
 header ul li a { display: block; padding: 0px 30px 0px 30px; -webkit-transition: all .25s linear; transition: all .25s linear; }
