--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
@@ -44,6 +44,10 @@
         <div class="left square light-green">7</div>
         @Html.RouteLink("Albury, NSW", "Albury")
     </li>
+    <li class="light-green">
+        <div class="left square dark-green">8</div>
+        @Html.RouteLink("Bowen, QLD", "Bowen")
+    </li>
 </ul>
 
 <div class="map">
@@ -55,6 +59,7 @@
         @Html.RouteLink("5", "South-Brisbane", new { }, new { @class = "square red south-brisbane" })
         @Html.RouteLink("6", "Townsville", new { }, new { @class = "square light-blue townsville" })
         @Html.RouteLink("7", "Albury", new { }, new { @class = "square light-green albury" })
+        @Html.RouteLink("8", "Bowen", new { }, new { @class = "square dark-green bowen" })
 
 </div>
 
