--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Bowen.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Bowen.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Albury, NSW Centrelink";
+    ViewBag.Title = "Bowen, QLD Centrelink";
     ViewBag.PageId = "property-portfolio-single";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.SelectedTab = "Property Portfolio";
-    ViewBag.SelctedProperty = "Albury";
+    ViewBag.SelctedProperty = "Bowen";
 }
 
 @section LeftNavigation{
@@ -11,20 +11,20 @@
     @Html.Partial("PropertySideNav")
 }
 
-<h2>Albury, NSW</h2>
+<h2>Bowen, QLD</h2>
 
 <ul class="table two-column">
     <li>
         <p>Address:</p>
-        <p>430 Wilson St, Albury, NSW</p>
+        <p>53 Bowen St, Bowen, QLD</p>
     </li>
     <li>
         <p>Description:</p>	
-        <p>Single level office building with 40 basement car spaces</p>
+        <p>Single level office building with parking for 14 cars</p>
     </li>
     <li>
         <p>Net Lettable Area:</p>
-        <p>1,750 square metres</p>
+        <p>680 square metres</p>
     </li>
     <li>
         <p>Tenant:</p>
@@ -36,8 +36,8 @@
     </li>
     <li>
         <p>Lease Commencement:</p>
-        <p>29 October 2009</p>
+        <p>December 2009</p>
     </li>
 </ul>
 
-<img src="http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/properties/Albury.png" width="755" />
+<img src="http://castlerockproperty.blob.core.windows.net/auslinkproperty/images/properties/bowen/bowen.jpg" />
