Added bowen to the navigation

--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
                     @Html.RouteLink("South Brisbane, QLD", "South-Brisbane")
                     @Html.RouteLink("Townsville, QLD", "Townsville")
                     @Html.RouteLink("Albury, NSW", "Albury")
+                    @Html.RouteLink("Bowen, QLD", "Bowen")
                     
                 </div>
             </li>
